Moved LINCS_functions and added additional documentation for GCT_pipeline.ipynb

--- a/python_notebooks/GCT_pipeline.ipynb
+++ b/python_notebooks/GCT_pipeline.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compute consensus signatures for perturbations and DrugBank compounds"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -29,6 +36,7 @@
     "\n",
     "# Import LINCS_functions.py file\n",
     "# NOTE: Alter LINCS_functions.py file to contain YOUR local path to l1ktools (as above) and the LINCS modzs.gctx file\n",
+    "sys.path.append(os.path.abspath('../'))\n",
     "import LINCS_functions as lf"
    ]
   },
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +154,7 @@
        "4           NaN  False     True   False   inferred  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -442,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -455,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -466,7 +474,7 @@
        "13072"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -489,7 +497,7 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th>gene</th>\n",
+       "      <th></th>\n",
        "      <th>10007</th>\n",
        "      <th>1001</th>\n",
        "      <th>10013</th>\n",
@@ -664,7 +672,7 @@
        "</div>"
       ],
       "text/plain": [
-       "gene              10007      1001     10013     10038     10046     10049  \\\n",
+       "                  10007      1001     10013     10038     10046     10049  \\\n",
        "pert_id                                                                     \n",
        "BRD-A00100033 -0.065179  3.696332 -1.700519 -0.155817 -0.631788  0.214929   \n",
        "BRD-A00150179  0.178658  1.264003  1.399285  0.492447 -0.336569 -0.907009   \n",
@@ -672,7 +680,7 @@
        "BRD-A00420644  2.186510  0.202994 -4.654153 -2.815903  2.550356 -0.307756   \n",
        "BRD-A00474148 -0.704136  3.314840 -0.462520  0.713010  1.250462  0.955812   \n",
        "\n",
-       "gene              10051     10057     10058     10059    ...         9918  \\\n",
+       "                  10051     10057     10058     10059    ...         9918  \\\n",
        "pert_id                                                  ...                \n",
        "BRD-A00100033 -0.056040 -0.741466 -1.280059 -0.242464    ...     0.081531   \n",
        "BRD-A00150179  0.441127 -0.462054  0.010908  0.814729    ...    -1.281036   \n",
@@ -680,7 +688,7 @@
        "BRD-A00420644 -4.253960  3.887502 -1.853218  0.478189    ...    -2.109322   \n",
        "BRD-A00474148  0.030453 -0.355433 -0.492126 -2.036731    ...    -1.009960   \n",
        "\n",
-       "gene               9924      9926      9928       993       994      9943  \\\n",
+       "                   9924      9926      9928       993       994      9943  \\\n",
        "pert_id                                                                     \n",
        "BRD-A00100033  0.690079 -0.256267 -0.289961 -0.092473 -0.878243 -0.949191   \n",
        "BRD-A00150179  1.165360  0.859917 -0.504816  1.617118  1.023730  0.229926   \n",
@@ -688,7 +696,7 @@
        "BRD-A00420644 -1.722654  0.087142 -3.514419 -0.055212 -2.989028  1.203165   \n",
        "BRD-A00474148 -0.194795 -0.698215 -1.104338  0.087596  0.184683 -0.499116   \n",
        "\n",
-       "gene               9961       998      9988  \n",
+       "                   9961       998      9988  \n",
        "pert_id                                      \n",
        "BRD-A00100033  0.065545  0.069715  3.350655  \n",
        "BRD-A00150179 -0.482598  0.879627  0.199550  \n",
@@ -699,7 +707,7 @@
        "[5 rows x 978 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -731,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -787,7 +795,7 @@
        "4     DB00014   23581804"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -945,7 +953,7 @@
        "4                      21  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -971,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -983,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -996,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1007,7 +1015,7 @@
        "1152"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -1240,7 +1248,7 @@
        "[5 rows x 978 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
